--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework-simplejwt = "^4.6.0"
 factory-boy = "^3.2.0"
 django-cors-headers = "^3.7.0"
 responses = "^0.13.2"
+gunicorn = "^20.1.0"
 [tool.poetry.dev-dependencies]
 
 [build-system]
