--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,5 +1,17 @@
 name: Django CI
 
+env:
+  # postgres service variables
+  POSTGRES_DB: development
+  POSTGRES_USER: development
+  POSTGRES_PASSWORD: development
+  # Django variables
+  DJANGO_SETTINGS_MODULE: conf.settings.testing
+  DATABASE_TEST_URL: postgres://development:development@localhost/test_db
+  # Build variables
+  PIP_CACHE_DIR: /prebuild/pip-cache
+  PYTHON_VENV_DIR: /prebuild/venv
+
 on:
   push:
     branches: [ master ]
