Remove unrecognized arguments.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -54,4 +54,4 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
 
     - name: Run Tests
-      run: poetry run pytest --cov . -n 2
+      run: poetry run pytest
