--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,11 +34,24 @@ jobs:
         python-version: 3.7
     - name: psycopg2 prerequisites
       run: sudo apt-get install libpq-dev
-    - name: Install dependencies
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+          path: ~/.virtualenvs
+          key: poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            poetry-${{ hashFiles('**/poetry.lock') }}
+    - name: Set Poetry config
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest-django
+        poetry config virtualenvs.in-project false
+        poetry config virtualenvs.path ~/.virtualenvs
+    - name: Install Dependencies
+      run: poetry install
+      if: steps.cache.outputs.cache-hit != 'true'
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
