--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,6 +3,14 @@
 
 name: Python application
 
+env:
+  # Django variables
+  DJANGO_SETTINGS_MODULE: conf.settings.testing
+  DATABASE_TEST_URL: postgres://development:development@localhost/test_db
+  # Build variables
+  PIP_CACHE_DIR: /prebuild/pip-cache
+  PYTHON_VENV_DIR: /prebuild/venv
+
 on:
   push:
     branches: [ master ]
