--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_USER: development
-          POSTGRES_PASSWORD: development
-          POSTGRES_DB: development
+          POSTGRES_USER: ${{ secrets.POSTGRES_VARIABLE }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_VARIABLE }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_VARIABLE }}
         ports:
           - 5432:5432
         # needed because the postgres container does not provide a healthcheck
