--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,6 +4,9 @@
 name: Python application
 
 env:
+  # Env variables
+  TMDB_API_KEY: ${{ secrets.TMDB_API_KEY }}
+  TMDB_IMAGE_BASE_URL: ${{ secrets.TMDB_IMAGE_BASE_URL }}
   # Django variables
   DJANGO_SETTINGS_MODULE: conf.settings.testing
   DATABASE_TEST_URL: postgres://development:development@localhost/test_db
