--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -65,6 +65,5 @@ jobs:
       if: steps.cache.outputs.cache-hit != 'true'
     - name: Run tests
       run: poetry run pytest
-    - name: Analysing the code with pylint
-      run: |
-        pylint `ls -R|grep .py$|xargs`
+    - name: Analysing the code with flake8
+      run: poetry run flake8
