--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ factory-boy = "^3.2.0"
 django-cors-headers = "^3.7.0"
 responses = "^0.13.2"
 gunicorn = "^20.1.0"
+flake8 = "^4.0.1"
 [tool.poetry.dev-dependencies]
 
 [build-system]
