--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v1
       with:
-        python-version: 3.10
+        python-version: "3.10"
     - name: psycopg2 prerequisites
       run: sudo apt-get install libpq-dev
     - name: Install Poetry
